--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport"content="width=device-width, initial-scale=1">
+	<link rel="stylesheet"href="css/style.css">
 	<title>css landing page</title>
 </head>
 <body>
+
+<!-- Home section -->
+	<div class="vission">
+		<h1>working on</h1>
+		<div class="frame"></div>
+		<div class="frame"></div>
+	</div>
+
+
 
 </body>
 </html>
