landing page designed

--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
 	<link rel="stylesheet"href="css/style.css">
 	<title>css landing page</title>
 </head>
-<body>
+
+<body class="page">
 
 <!-- Home section -->
-	<div class="vission">
-		<h1>working on</h1>
+	<div class="load">
 		<div class="frame"></div>
 		<div class="frame"></div>
 	</div>
-
-
+	<section class="framebanner"> 
+		<div class="banner">
+			<h1> head text </h1>
+			<h2>description</h2>
+			<p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs add one idea at a time to your broader argument.</p>
+			<a href="#">Read more</a>
+		</div>
+		<img src="asset/logo.jpg" class="imge"alt="">
+	</section>
 
 </body>
 </html>
